public/stylesheets/style.css
/* IMPORTS */
/* Google Fonts */
/* // <uniquifier>: Use a unique and descriptive class name
// <weight>: Use a value from 100 to 900

.lexend-<uniquifier> {
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
    font-weight: <weight>;
    font-style: normal;
}

// <uniquifier>: Use a unique and descriptive class name
// <weight>: Use a value from 200 to 1000

.nunito-<uniquifier> {
    font-family: "Nunito", sans-serif;
    font-optical-sizing: auto;
    font-weight: <weight>;
    font-style: normal;
} */



/* Main Elements */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: "Lexend", sans-serif;
    font-size: 16pt;
    color: #001060;
}

h1 {
    margin: 30px 0;
    padding: 0 10% 0 10%;
    width: 100%;
    font-family: "Nunito", sans-serif;
    font-size: 5vw;
    color: #001060;
    text-align: center;
}

main {
    display: flex;
    position: relative;
    flex-direction: column;
}
/* Links and Buttons */
.title{
    display: flex;
    padding-left: 40px;
    font-family: "Nunito", sans-serif;
    font-size: 6vw;
    font-weight: 900;
    color: #001060;
    text-shadow: 3px 3px 2px black;
}
.subtitle{
    display: flex;
    padding-left: 60px;
    font-family: "Nunito", sans-serif;
    font-size: 3vw;
    font-weight: 900;
    color: #001060;
    text-shadow: 2px 2px 1px black;
}
.links-wrapper{
    display: flex;
    margin: 30px 0;
    gap: 20px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.link-column{
    width: 50%;
}
.link-btn {
    border: solid black 2px;
    border-radius: 50px;
    background-image: radial-gradient(#001060, #223282); 
    width: 300px; 
    color: white;
    font-size: 22pt;
    font-weight: 500;
    cursor: pointer;
    padding: 10px;
    box-shadow: 5px 5px 5px black;
}
.link-btn:hover {
    box-shadow: 1px 1px 1px black;
    border: solid #F0821D 4px;
}
.link-btn a {
    color: white;
    text-decoration: none;
}
.links-wrapper button {
    font-family: "Lexend", sans-serif;
}

.form-btn {
    border: solid black 2px;
    border-radius: 50px;
    background-image: radial-gradient(#F0821D , #F2A43F);
    width: 300px;
    color: #001060;
    font-size: 22pt;
    font-weight: 700;
    cursor: pointer;
    padding: 10px;
    box-shadow: 5px 5px 5px black;
}
.form-btn:hover {
    box-shadow: 1px 1px 1px black;
    border: solid white 4px;
}

.like-btn-div {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 10px;
    margin-bottom: -20px;
}

.like-btn {
    margin: 0;
    border: transparent;
    padding: 0;
    display: flex;
    align-self: flex-start;
    background-color: transparent;
    height: fit-content;
    width: fit-content;
    cursor: pointer;
    z-index: 1;
}
.like-btn img{
    height: 40px;
}

#sparkImages {
    display: flex;
    align-items: center;
    color: white;
    padding-top: 10px;
}

.spark-images-show{
    margin-top: 40px;
    display: flex;
    flex-flow: row wrap;
    width: 80%;
}
.spark-images-show img{
    width: 30%;    
}
/* Flash messaging display (Chat GPT Aided */
.alert {
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 5px;
    position: relative;
    transition: opacity 0.5s ease;
}

.alert .close {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    font-size: 20px;
    cursor: pointer;
}

.alert-success {
    background-color: #d4edda;
    color: #155724;
}

.alert-danger {
    background-color: #f8d7da;
    color: #721c24;
}

/* Header and Home Header */
header {
    margin-bottom: 0px;
    display:flex;
    flex-direction: column;
    background-image: url("/images/Orange-splodge.svg");
    background-repeat: no-repeat;
    background-size: cover;
    height: 34vw;
    z-index: 3;
}

.hero-img{
    display: flex;
    justify-content: flex-end;
    margin-top: -10vw;
    overflow-x: hidden;
}
.hero-img img{
    border-radius: 100%;
    width: 50%;
    height: auto;
    margin-right: -100px;
}

/* Nav Bar */
nav {
    top: 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    z-index: 1;
}

nav a img {
    width: 7vw;
    margin: -10px 0 -7vw 10px;
}

.welcome {
    font-family: "Nunito", sans-serif;
    color: white;
    font-size: 2vw;
    margin-left: -2vw;

}
.nav-links {
    list-style: none;
}

.nav-links li {
    display: inline-block;
    
}

.nav-links a {
    color: #001060;
    text-decoration: none;
    font-family: "Nunito", sans-serif;
    font-weight: 900;
    font-size: 2vw;
    border-radius: 20px;
    padding: 20px;
}

.nav-links a:focus,
.nav-links a:hover {
    background-color: #001060;
    color: #fff;
}

.profile-link {
    display: flex;
    align-items: center;
}
.profile-link a:hover {
    color: #fff;
    background-color: transparent;
}
.profile-link img {
    width: 5vw;
}

.burger {
    display: none;
}

/* Burger icon animation */
.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}


/* Home Page */

.home-content {
    display: flex;
    flex-direction: column;
    position: relative;
    margin-bottom: 25px;
    padding: 0vw 8vw 0vw 8vw;
    line-height: 1.5;
}

.placeholder {
    width: 90%;
    margin: 50px;
    height: 300px;
    background-color: green;
}

/* Sparks/Index */

.card-wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 96%;
}
.card-wrapper a {
    text-decoration: none;
}

.spark-card {
    text-align: center;
    width:325px;
    height: 450px;
    padding:25px;
    border: 1px solid #ccc;
    border-radius: 8px;
    background-color: #fff;
    margin: 20px;
}

.spark-card-title {
    display: flex;
    margin-bottom: 10px;
    border-radius: 10px;
    padding: 0 10px;
    align-items: center;
    text-align: center;
    height: 100px;
    background-color: #001060;
    color: white;
    font-family: "Nunito", sans-serif;
    font-size: 32px;

}
.spark-card img{
    width: 200px;
}

.spark-card-blurb {
    font-size: 17px;
    color: #001060;
    line-height: 1.5;
}

/* Sparks Show Page */

.show-spark-main{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 75%;
    text-align: center;
    color: #001060;
}
.show-spark-heading {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
    line-height: 0.75;
}

.show-spark-content {
    margin-top: 40px;
    border: solid #F0821D 5px;
    border-radius: 25px;
    padding: 20px 40px 40px 40px;
    width: 90%;
    height: fit-content;
    background-color: #001060;
    color: white;
    box-shadow: 5px 5px 5px black;
}
.show-spark-content h2{
    margin-bottom: 20px;
}
.show-spark-content p {
    text-align: left;
}

/* Comments */
.comments-wrapper{
    margin-top: 50px;
    padding: 20px;
    display: flex;
    flex-flow: column wrap;
    width: 75%;
    border: solid #001060 5px;
    border-radius: 20px;
}
.comment-cards {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    gap: 20px;
}
.comments-card {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    border: #F0821D 4px solid;
    padding: 15px;
    border-radius: 20px;
    color: #fff;
    width: 300px;
    gap: 10px;
}

.comment-section {
    padding: 5px;
    background-color:#001060;
    border-radius: 10px;
}
.comment-delete {
    background-color: #F0821D;
    cursor: pointer;
    box-shadow: 3px 3px 1px black;
}
.comment-delete:hover {
    box-shadow: 1px 1px 0px black;
}
.comment-input {
    margin-top: -20px;
    border: solid #F0821D 4px;
    width: 75%;
    height: 100px;
}

/* Profile Page */
.profile-card-wrapper {
    margin-bottom: 30px;
    display: flex;
    width: 90%;
}

.profile-card-wrapper a {
    text-decoration: none;
}
.carousel {
    display: flex;
    flex-wrap: nowrap;
    overflow: scroll;

}

/* Forms */
.form-wrapper {
    margin-top: 10px;
    padding: 60px;
    display: flex;
    align-items: center;
    background-color: #001060;
    width: 100%;
    
}
form{
    display: flex;
    gap: 20px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}
.row{
    width: 100%;
}

label {
    font-size: 20pt;
    color: white;
}
form input {
    height: 50px;
    width: 100%;
    font-size: 16pt;
    margin-top: 8px;
}
form input:active {
    border: solid #F0821D 4px;
}

textarea {
    display: flex;
    align-items: flex-start;
    width: 100%;
    height: 400px;
    font-size: 16pt;
    font-family: "Lexend", sans-serif;
    margin-top: 8px;
}
form textarea:active {
    border: solid #F0821D 4px;
}

form button {
    margin: 10px;
    padding: 10px;
    font-size: 24pt;
    background-color: #F0821D;
    color: white;
    border-radius: 15px;
}

.user-info-field {
    max-width: 75%;
}

/* Media Queries */
@media screen and (min-width: 768px){
    .user-info-field {
        max-width: 50%;
        }
}



@media screen and (max-width: 768px) {
    .nav-links{
        position: absolute;
        right: 0;
        height: 92vh;
        top: 8vh;
        background-color: rgba(0, 0, 0, 0.95);
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
        z-index: 2;
    }

    .nav-links li {
        opacity: 0;
        line-height: 100px;
    }
    .nav-links a {
        color: white;
        font-size: 5vw;
    }

    .burger {
        display: block;
        cursor: pointer;
    }

    .burger div {
        width: 25px;
        height: 3px;
        background-color: white;
        margin: 5px;
        transition: all 0.3s ease;
    }

    .nav-active {
        transform: translateX(0);
    }

    .hero-img img {
        visibility: hidden;
    }

    @keyframes navLinkFade {
        form {
            opacity: 0;
        }
        to{
            opacity: 1;
        }
    }
    .nav-links li {
        animation: navLinkFade 0.5s ease forwards 0.5s;
    }

    .card-wrapper {
        flex-direction: column;
    }
    /* The bellow doesn't seem to be doing anything need to investiage further */
    .card {
        width:calc(100% - 40px)
    }
}

